[package]
name = "rest-apis"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
axum = "0.8.4"
dotenv = "0.15.0"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
